--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.1.0",
+    "npm": "^10.4.0",
     "react": "^18",
     "react-dom": "^18",
     "serverless-mysql": "^1.5.5"
