se agrega next-auth (ejecutar npm i para instalar la nueva dependencia) se creo middleware.ts se deja comentado para que no dificulte el desarrollo.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "npm": "^10.4.0",
     "react": "^18",
     "react-dom": "^18",
