--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-toast": "^1.1.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "npm": "^10.4.0",
     "react": "^18",
     "react-dom": "^18",
     "serverless-mysql": "^1.5.5",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
