--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
+    "mercadopago": "^2.0.8",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "npm": "^10.4.0",
