Update product creation to include image upload to Cloudinary
* Add Cloudinary dependency and configuration
* Modify createProduct action to handle image upload
* Update Product type to include image field
* Add image display to CardProduct component
*

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
+    "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.2.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
     "mercadopago": "^2.0.8",
