--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.4",
+    "embla-carousel-react": "^8.0.4",
     "lucide-react": "^0.363.0",
     "mercadopago": "^2.0.8",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "next-auth": "^4.24.5",
     "npm": "^10.4.0",
     "react": "^18",
