--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "embla-carousel-react": "^8.0.4",
     "lucide-react": "^0.363.0",
     "mercadopago": "^2.0.8",
+    "mysql2": "^3.11.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.5",
     "npm": "^10.4.0",
